# my_rust_playground

./: .gitignore  README.md
0_kalosm-test/: Cargo.toml
0_kalosm-test/src/: main.rs
1_rust_llama_ccp/: Cargo.toml
1_rust_llama_ccp/src/: main.rs
2_rust_llama_ccp_2/: Cargo.toml  documentation.md
2_rust_llama_ccp_2/src/: main.rs
3_rust_llama_ccp_3_test_setup/: Cargo.toml  phi-4-q4.txt
3_rust_llama_ccp_3_test_setup/results/: Llama-3-8B-Q5.md  Llama-3-8B-Q8.md  mistral-7b-q5.md  phi-4-q4.md
3_rust_llama_ccp_3_test_setup/src/: example2_lorenz.json  execute_model.rs  main.rs
4_extract-info-pdf/: Cargo.toml
4_extract-info-pdf/src/: main.rs
5_rust_llama_ccp_3_giving_context/: Cargo.toml
5_rust_llama_ccp_3_giving_context/src/: example.json  execute_model.rs  main.rs
