[package]
name = "kalosm-test"
version = "0.1.0"
edition = "2021"

[dependencies]
kalosm = { git = "https://github.com/floneum/floneum", version = "0.4.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3"

[build]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=-avx,-avx2"]
